# spack-gantry

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  spack.yaml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: issue-feature-request.md
.github/workflows/: ci.yml  container.yml  style.yml  unit-tests.yml
.github/workflows/requirements/: style.txt  unit-tests.txt
db/: init_db.py  schema.sql
dev/: bulk_collect.py  gen_mappings.py  simulate_predict.py
dev/generate_local/: README.md  spack.yaml
docs/: api.md  arch.md  context.md  data-collection.md  deploy.md  home.md  prediction.md  problem-statement.md  readme.md  testing.md
gantry/: __main__.py  collection.py  main.py  prediction.py  views.py
gantry/clients/: __init__.py  gitlab.py  prometheus.py
gantry/clients/db/: insert.py
gantry/clients/prometheus/: __init__.py  job.py  node.py  prometheus.py  util.py
gantry/db/: __init__.py  get.py  insert.py
gantry/models/: __init__.py  build.py  job.py  vm.py
gantry/routes/: collection.py  prediction.py
gantry/routes/prediction/: current_mapping.py  prediction.py
gantry/tests/: conftest.py  test_collect.py  test_collection.py  test_db.py  test_prediction.py  test_prometheus.py  test_spec.py  test_utils.py
gantry/tests/defs/: db.py  (+3 more)
gantry/util/: gitlab.py  k8s.py  misc.py  prediction.py  prometheus.py  spec.py  time.py
gantry/utils/: collect.py  db.py  gitlab.py  misc.py  prometheus.py
migrations/: 001_initial.sql  003_job_cost.sql  003_oom_retry.sql  003_spec_index.sql
(+3 files in other folders)
